--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <module>lzj-banner</module>
         <module>lzj-commons</module>
         <module>lzj-gateway</module>
+        <module>lzj-hot-product</module>
+        <module>lzj-recommendation</module>
     </modules>
 
     <properties>
